singularity/jobs/error3963960.err
  File "train.py", line 105
    start = segment_start,end = segment_end,bl)
                                           ^
SyntaxError: positional argument follows keyword argument
